5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1594_820.log
== TEST (2019-04-01 18:26:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:27:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor//50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor//50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:28:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor//50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor//50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:13) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor//50 = notas_RS50

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- ERROR:
File "XXXX", line 8
    valor//50 = notas_RS50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_RS50 = valor//50 
# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:29:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_RS50 = valor//50 
# Valor restante a ser sacado com notas menores que R$ 50
resto_RS50 = valor % 50

# Quantidade de notas de R$ 10
notas_RS10 = resto_RS50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_RS10 = resto_RS50 % 10

# Quantidade de notas de R$ 2
notas_RS2 = resto_RS10 // 2

print(int(notas_RS50))
print(int(notas_RS10))
print(int(notas_RS2))

-- EXECUTION TIME:
0.140495
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
